--- a/index.html
+++ b/index.html
@@ -16,6 +16,11 @@
 
 <body>
 
+  <div id="info">
+
+        <a href="https://www.dynamicmath.xyz" target="_blank" rel="noopener">dynamicmath.xyz</a>
+    </div>
+
 	<script>
 		/*
  
