--- a/slides/1010-eng/week-08.html
+++ b/slides/1010-eng/week-08.html
@@ -72,7 +72,7 @@
 					</span>
 				</h2>
 
-				<p style="margin-top: 50px;">Week 8 - Probability I</p>
+				<p style="margin-top: 50px;">Week 8 - Probability</p>
 				<br />
 			</section>
 
