--- a/slides/1010-eng/week-09.html
+++ b/slides/1010-eng/week-09.html
@@ -62,7 +62,7 @@
 					</span>
 				</h2>
 
-				<p style="margin-top: 50px;">Week 9 - Probability I</p>
+				<p style="margin-top: 50px;">Week 9 - Probability</p>
 				<br/>
 			</section>
 
