--- a/slides/1010-eng/week-11.html
+++ b/slides/1010-eng/week-11.html
@@ -47,33 +47,26 @@
 
 			<!-- Any section element inside of this container is displayed as a slide -->
 
-
-
 			<section>
 
-				<div style="margin-top: -40px; margin-bottom: 30px;">
+				<div style="margin-top: -40px; margin-bottom: 40px;">
 					<img src="images/gu-logo-black-white.gif"
 						style="width: 200px; vertical-align: middle; border: 0px solid rgb(255, 255, 255);">
 				</div>
 
-				<h3 style="margin-bottom: 80px;font-size: 70%; color: rgb(148, 148, 148);">1010ENG/1201SCG</h3>
-
-				<div class="size-70 left-txt">
-					<p>
-						Maths might seem like it's about getting the right answers, but really it's about the process of
-						discovering, the process of exploration, the journey towards mathematical truth, and how to
-						regonise when we've found it.
+				<h2>
+					<span class="size-70">
+						Linear Algebra <br />
+						&amp;
 						<br />
+						Engineering Mathematics 1
+					</span>
+				</h2>
 
-					</p>
-					<p style="text-align: right;">
-						<span>
-							<strong>Eugenia Cheng</strong>, Is Maths real? (2023)
-						</span>
-					</p>
-				</div>
-
-				<p style="margin-top: 80px;">Week 11 - Probability II</p>
+				<p style="margin-top: 50px;">Week 11
+					<br />
+					<span class="size-65">Probability</span>
+				</p>
 				<br />
 			</section>
 
