--- a/slides/1010-eng/week-11.html
+++ b/slides/1010-eng/week-11.html
@@ -63,9 +63,7 @@
 					</span>
 				</h2>
 
-				<p style="margin-top: 50px;">Week 11
-					<br />
-					<span class="size-65">Probability</span>
+				<p style="margin-top: 50px;">Week 11 - Probability
 				</p>
 				<br />
 			</section>
