--- a/slides/1010-eng/f-used-code.html
+++ b/slides/1010-eng/f-used-code.html
@@ -219,7 +219,7 @@
 	</div>
 
 	
-	<<script src="../revealjs/dist/reveal.js"></script>
+	<script src="../revealjs/dist/reveal.js"></script>
 	<script src="../revealjs/plugin/math/math.js"></script>
 	<script src="../revealjs/plugin/highlight/highlight.js"></script>
 	<script src="../revealjs/plugin/zoom/zoom.js"></script>
