--- a/slides/1010-eng/index.html
+++ b/slides/1010-eng/index.html
@@ -53,8 +53,8 @@
 					<table style="width: 100%;">
 						<tr>
 							
-							<th colspan="2" style="text-align: center;">Lectures</th>
-							<th style="text-align: center;">Extras &amp; Applets</th>
+							<th colspan="2" style="text-align: center;width: 45%;">Lectures</th>
+							<th style="text-align: center;width: 55%;">Extras &amp; Applets</th>
 						</tr>
 						<tr class="toc">
 							
