--- a/slides/1010-eng/week-07.html
+++ b/slides/1010-eng/week-07.html
@@ -133,7 +133,7 @@
 							</span>
 							<span class="fragment" data-fragment-index="6">
 								\(
-								= \mathbf a
+								= \mathbf b
 								\)
 							</span>
 						</p>
@@ -194,7 +194,7 @@
 							</span>
 							<span>
 								\(
-								= \mathbf a
+								= \mathbf b
 								\)
 							</span>
 						</p>
@@ -207,7 +207,7 @@
 							<span class="fragment" data-fragment-index="4">
 								\( \left(
 								\begin{array}{r|r}
-								A & \mathbf a
+								A & \mathbf b
 								\end{array}
 								\right) \) =
 							</span>
@@ -678,7 +678,7 @@
 						<p style="text-align: center;">
 
 							<span class="fragment" data-fragment-index="0">
-								$A \mathbf x = \mathbf a$
+								$A \mathbf x = \mathbf b$
 							</span>
 							<span class="fragment" data-fragment-index="1">
 								$\,\Rightarrow\, $
@@ -687,7 +687,7 @@
 								$ \mathbf x = $
 							</span>
 							<span class="fragment" data-fragment-index="1">
-								$ A^{-1}A\mathbf x = A^{-1}\mathbf a$
+								$ A^{-1}A\mathbf x = A^{-1}\mathbf b$
 							</span>
 
 
@@ -724,7 +724,7 @@
 						<p style="text-align: center;">
 
 							<span>
-								$A \mathbf x = \mathbf a$
+								$A \mathbf x = \mathbf b$
 							</span>
 							<span>
 								$\,\Rightarrow\, $
@@ -733,7 +733,7 @@
 								$ \mathbf x = $
 							</span>
 							<span>
-								$ A^{-1}A\mathbf x = A^{-1}\mathbf a$
+								$ A^{-1}A\mathbf x = A^{-1}\mathbf b$
 							</span>
 
 
@@ -741,7 +741,7 @@
 						</p>
 						<p style="text-align: center;">
 							<span>
-								$ \mathbf x = A^{-1} \mathbf a$
+								$ \mathbf x = A^{-1} \mathbf b$
 							</span>
 							<span class="fragment" data-fragment-index="4">
 								$ = \frac{1}{3}
