--- a/slides/1010-eng/week-08.html
+++ b/slides/1010-eng/week-08.html
@@ -168,6 +168,7 @@
 					</div>
 					<div style="font-size:40%;margin-top:-20px">
 						<p>
+
 							<a href="https://www.geogebra.org/m/tPFA7R3s" target="_blank">Source <i
 									class="fa fa-external-link-alt"></i></a>
 						</p>
@@ -180,13 +181,16 @@
 					<h5>Experimental probability</h5>
 
 
-					<iframe scrolling="no" style="border:0px;" width="755" height="532"
+					<iframe name="tossing-coin" scrolling="no" style="border:0px;" width="755" height="532"
 						src="sketches/tossing-coin/"></iframe>
 
-					<div style="font-size:40%;margin-top:-25px">
+					<div style="font-size:40%;margin-top:-30px">
 						<p>
-							Source: <a href="https://digitalfirst.bfwpub.com/stats_applet/stats_applet_10_prob.html"
-								target="_blank">Digital First <i class="fa fa-external-link-alt"></i></a>
+							<button onclick="var ifr=document.getElementsByName('tossing-coin')[0]; ifr.src=ifr.src;" style="cursor: pointer;"><strong><i class="fas fa-sync"></i></strong></button>
+							
+
+							<!--&nbsp;&nbsp;&nbsp; Source: <a href="https://digitalfirst.bfwpub.com/stats_applet/stats_applet_10_prob.html"
+								target="_blank">Digital First <i class="fa fa-external-link-alt"></i></a>-->
 						</p>
 					</div>
 				</section>
