--- a/slides/1010-eng/week-07.html
+++ b/slides/1010-eng/week-07.html
@@ -277,7 +277,7 @@
 							<span>
 								\( \left(
 								\begin{array}{r|r}
-								A & \mathbf a
+								A & \mathbf b
 								\end{array}
 								\right) \) =
 							</span>
