--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@ Date: 15/Jan/2024
       cursor('grabbing');
 
       if (isMouseOverLink()) {
-        window.open("https://dynamicmath.xyz", "_blank");
+        window.open("https://www.dynamicmath.xyz", "_blank");
       }
     }
 
